# cpp-coursework

./: .gitignore  2019-02-24_License_Verification_and_Enforcement.txt  CMakeLists.txt  Makefile  notes.md  q2-notes.md
711/: notes.md
712/: README.md  notes.md
assignment-1/: ArrayIntTest.cpp  ArrayTest.cpp  CircleTest.cpp  RWDoubleTest.cpp  RWStringTest.cpp  StringStreamTest.cpp  assignment1.txt  circle.cpp  circle.h  jstronz-1-2.cpp  jstronz-1-3.cpp  jstronz-1-3.h  main.cpp  main.cpp~  tests.cpp  tests.h
assignment-2/: CatTest.cpp  MonthDaysTest.cpp  SwapTest.cpp  assignment-output.txt  assignment.txt  jstronz-2-1.cpp  jstronz-2-1.h  jstronz-2-2.cpp  jstronz-2-3.cpp  jstronz-2-3.h  main.cpp  student.cpp  student.h  studentprocessor.cpp  studentprocessor.h  tests.cpp  tests.h  types.h
assignment-3/: main.cpp
assignment-4/: Date.cpp  DateTest.cpp  LambdaTest.cpp  jstronz-4-1.h  jstronz-4-4.h  jstronz-4-5.txt  main.cpp  output.txt  write.cpp  write.h
assignment-5/: Board.cpp  Board.h  CharQueue1.cpp  CharQueue1.h  CharQueue2.cpp  CharQueue2.h  Dictionary.cpp  Dictionary.h  TestCharQueue1.cpp  TestCharQueue2.cpp  WordFinder.cpp  WordFinder.h  WordGame.cpp  WordGame.h  charqueue.py  main.cpp
assignment-7/: TestArray.cpp  TestProbe.cpp  array.cpp  array.h  assignment-7.txt  probe.cpp  probe.h  proposal.txt
assignment-8/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  TestShape.cpp  Triangle.cpp  Triangle.h  shape.h
examples/: rw-strings.cpp  template.cpp
include/: Main.cpp  XxxTest.cpp
project/: ExampleLicense.sig  LicenseArbiter.cpp  TestConstraintSatisfaction.cpp  TestLicense.cpp  constraint_satisfaction.cpp  constraint_satisfaction.h  eprivate.pem  project-proposal.txt
q1-assignment-1/: jstronz-1-2.cpp  jstronz-1-3.cpp  jstronz-1-3.h  test-arr-int.cpp  test-sstream.cpp  test-vect-int.cpp
q1-assignment-2/: jstronz-2-1.cpp  jstronz-2-1.h  jstronz-2-2.cpp  jstronz-2-2.h  jstronz-2-3.cpp  jstronz-2-3.h  test-cat.cpp  test-month-day.cpp  test-swap.cpp
(+163 files in other folders)
